--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,5 @@
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.9-bin.zip
+#Mon Nov 07 11:45:04 EST 2022
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.3.1-bin.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
