--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,6 +15,7 @@
 # HOCON will fall back to substituting environment variable:
 #mykey = ${JAVA_HOME}
 
+
 ## Akka
 # https://www.playframework.com/documentation/latest/ScalaAkka#Configuration
 # https://www.playframework.com/documentation/latest/JavaAkka#Configuration
@@ -338,12 +339,22 @@ db {
   # By convention, the default datasource is named `default`
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
-  #default.driver = org.h2.Driver
+  default.driver = org.h2.Driver
+
+  # DB file on disk
+  default.url="jdbc:h2:file:./data/productsDB"
+
   #default.url = "jdbc:h2:mem:play"
-  #default.username = sa
-  #default.password = ""
+  default.username = sa
+  default.password = ""
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
-  #default.logSql=true
+  default.logSql=true
 }
+
+# Ebean configuration
+# ~~~~~
+# You can declare as many Ebean servers as you want.
+# By convention, the default server is named `default`
+ebean.default=["models.*"]
